# ktracer

./: .gitignore  CMakeLists.txt  Makefile  README  application.cc  application.hh  camera.cc  camera.hh  film.cc  film.hh  material.cc  material.hh  plane.cc  plane.hh  ray.cc  ray.hh  scene-object.cc  scene-object.hh  scene.cc  scene.hh  sky.cc  sky.hh  sphere.cc  sphere.hh  vector3.cc  vector3.hh  window.cc  window.hh
data/: data
src/: application.cc  application.hh  camera.cc  camera.hh  film.cc  material.cc  matrix3.cc  matrix3.hh  matrix4.cc  matrix4.hh  operations.cc  operations.hh  plane.hh  ray.cc  scene-object.cc  scene-object.hh  scene.cc  scene.hh  sphere.hh  triangle.cc  triangle.hh  vector3.cc  vector3.hh  window.cc  window.hh
